--- a/Physics_Suite/Physics_Suite.vcxproj.filters
+++ b/Physics_Suite/Physics_Suite.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClInclude Include="include\CircleActor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Collider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
