Began implementing a collision system, adding methods to PhysicsActor and implementing the virtual ones in the concrete classes. Also added EdgeActor to represent line segments.

--- a/Physics_Suite/Physics_Suite.vcxproj.filters
+++ b/Physics_Suite/Physics_Suite.vcxproj.filters
@@ -34,6 +34,9 @@
     <ClCompile Include="source\CircleActor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\EdgeActor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\StateMachine.h">
@@ -70,6 +73,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Collider.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\EdgeActor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
