--- a/Physics_Suite/Physics_Suite.vcxproj
+++ b/Physics_Suite/Physics_Suite.vcxproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\CircleActor.cpp" />
+    <ClCompile Include="source\EdgeActor.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\PhysicsActor.cpp" />
     <ClCompile Include="source\StateMachine.cpp" />
@@ -106,6 +107,7 @@
     <ClInclude Include="include\BumperState.h" />
     <ClInclude Include="include\CircleActor.h" />
     <ClInclude Include="include\Collider.h" />
+    <ClInclude Include="include\EdgeActor.h" />
     <ClInclude Include="include\framerate.h" />
     <ClInclude Include="include\OrbitState.h" />
     <ClInclude Include="include\PhysicsActor.h" />
