--- a/Physics_Suite/Physics_Suite.vcxproj.filters
+++ b/Physics_Suite/Physics_Suite.vcxproj.filters
@@ -43,6 +43,12 @@
     <ClCompile Include="source\Collider.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\BumperState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\random.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\StateMachine.h">
@@ -88,6 +94,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\CollisionResult.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\random.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
